--- a/example/cordova/www/index.html
+++ b/example/cordova/www/index.html
@@ -41,9 +41,10 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
+                <p id="configArea"></p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/bundle.js"></script>
     </body>
 </html>
