fix: ondeviceready, css + fonts distribution

--- a/example/cordova/www/index.html
+++ b/example/cordova/www/index.html
@@ -12,7 +12,8 @@
   <title>AeroGear Cordova Example App</title>
 
   <link rel="stylesheet" href="framework7/css/framework7.min.css">
-  <link rel="stylesheet" href="css/icons.css">
+  <link rel="stylesheet" href="css/framework7-icons.css">
+  <link rel="stylesheet" href="fonts/material-icons.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -99,9 +100,7 @@
 
   </div>
   <!-- Cordova -->
-  <!--
   <script src="cordova.js"></script>
-  -->
   <!-- Framework7 library -->
   <script src="framework7/js/framework7.min.js"></script>
   <!-- App routes -->
