--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Offix React Example - Getting started</title>
-  <link rel="stylesheet" href="node_modules/spectre.css/dist/spectre.min.css">
-  <link rel="stylesheet" href="node_modules/spectre.css/dist/spectre-icons.min.css">
+  <link rel="stylesheet" href="../../node_modules/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="../../node_modules/spectre.css/dist/spectre-icons.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
